added testing environment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 2.8)
 
-project(RK45)
+cmake_policy(SET CMP0048 NEW)
+project(RungeKutta VERSION 0.0.2)
+
+enable_testing()
+
 set(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/Installation")
 
 set (CMAKE_BUILD_TYPE Debug)
@@ -8,8 +12,10 @@ set (CMAKE_CXX_STANDARD 17)
 set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -m64 -Wall -pedantic")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64 -Wall -pedantic")
 
-add_executable(RK45 main.cpp)
+add_executable(RungeKutta main.cpp)
 
-target_include_directories (RK45 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_include_directories (RungeKutta PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-install(TARGETS RK45 DESTINATION bin)
+install(TARGETS RungeKutta DESTINATION bin)
+
+add_subdirectory(Tests)
